Code cleanup Intellij